--- a/src/components/site/templates/standard/section/footer/footer.less
+++ b/src/components/site/templates/standard/section/footer/footer.less
@@ -1,5 +1,21 @@
 .site-templates-standard-section-footer {
+  .column-with-items .add-item {
+    display: none;
+  }
 
-/*less/css stuff can go in here*/
+  .column-with-items:hover .add-item {
+    display: block !important;
+  }
 
+  .add-column {
+    display: none !important;
+  }
+
+  .add-column h1 {
+    text-align: center !important;
+  }
+}
+
+.site-templates-standard-section-footer:hover .add-column {
+  display: block !important;
 }
