--- a/src/components/builder/settings.html
+++ b/src/components/builder/settings.html
@@ -6,7 +6,7 @@
 
     <div class="modal-body p-a-0 js-modalBody">
         <form>
-            <div class="form-group" ng-repeat="setting in settings.settings track by $index">
+            <div class="form-group" ng-repeat="setting in settings.settings track by $index" ng-if="!setting.if || setting.if()">
                 <label>{{setting.label}}</label>
                 <div class="builder" ng-if="setting.type == 'switch'">
                     <label class="switch">
@@ -23,6 +23,9 @@
                 <img ng-if="setting.type == 'image' && $parent.thing[ setting.key ]" src="{{$parent.thing[ setting.key ]}}" style="max-width: 300px;" />
                 <input type="text" class="form-control" placeholder="Text" ng-model="$parent.thing[ setting.key ]" ng-if="setting.type == 'text'" />
                 <textarea class="form-control" rows="3" ng-model="$parent.thing[ setting.key ]" ng-if="setting.type == 'textarea'"></textarea>
+                <select class="form-control" rows="3" ng-model="$parent.thing[ setting.key ]" ng-if="setting.type == 'select'">
+                    <option ng-repeat="option in setting.options" value="{{option.value}}">{{option.label}}</option>
+                </select>
             </div>
             <button type="button" ng-click="ok()" class="btn btn-default">Save</button>
         </form>
