--- a/src/components/builder/builder.html
+++ b/src/components/builder/builder.html
@@ -73,7 +73,7 @@
         <!-- START Main section-->
         <section style="min-height: 995px;">
             <!-- START Page content-->
-            <div class="content-wrapper site-templates-standard">
+            <div class="content-wrapper site-templates-{{currentTemplate}}">
                 <div ng-if="content.sections && content.sections.length > 0" ui-sortable data-drop="true" ng-model="content.sections" jqyoui-droppable="{multiple:true, stack:false, onDrop: 'scrollToBottom'}" style="min-height: 150px;width:100%;" class="stage">
                     <div ng-repeat="section in content.sections track by $index" class="template-section">
                         <div class="section-settings">
@@ -83,7 +83,7 @@
                             <span class="fa fa-arrow-down pull-right" ng-if="$index + 1 < $parent.content.sections.length" ng-click="moveDown( section, $index )" style="cursor:pointer;"></span>
                             <span class="fa fa-arrow-up pull-right" ng-if="$index > 0" ng-click="moveUp( section, $index )" style="cursor:pointer;"></span>
                         </div>
-                        <ng-include src="'/templates/site/templates/standard/section/' + section.type + '/configure.html'" />
+                        <ng-include src="'/templates/site/templates/' + $parent.currentTemplate + '/section/' + section.type + '/configure.html'" />
                     </div>
                 </div>
                 <div ng-if="!content.sections || content.sections.length == 0" data-drop="true" data-jqyoui-options="{accept: 'a'}" ng-model="content.sections" jqyoui-droppable="{multiple:true}" style="min-height: 150px;width:100%;border: 3px dashed blue;" class="stage">
