refactored config settings

--- a/src/components/site/templates/standard/section/pricing/configure.html
+++ b/src/components/site/templates/standard/section/pricing/configure.html
@@ -13,7 +13,7 @@
                 <div class="p-x">
                     <h6 class="text-muted text-uppercase m-b" style="margin-bottom: 0 !important;" buttons="no" blur="submit" editable-text="price.name">{{price.name}}</h6>
                     <span style="font-size: 5em;"><sup style="font-size: .3em;top: -1.6em;margin-right: 5px;" buttons="no" blur="submit" editable-text="price.currency_symbol">{{price.currency_symbol}}</sup><span buttons="no" blur="submit" editable-text="price.price">{{price.price}}</span></span><span style="font-weight: bold;" buttons="no" blur="submit" editable-text="price.subtext">{{price.subtext}}</span>
-                    <p>{{price.description}}</p>
+                    <p buttons="no" blur="submit" editable-text="price.description">{{price.description}}</p>
                 </div>
 
                 <ul class="list-unstyled list-bordered text-left m-y-md list-items">
