--- a/src/components/builder/builder.html
+++ b/src/components/builder/builder.html
@@ -15,22 +15,35 @@
             </div>
             <!-- END navbar header-->
             <div class="nav-wrapper">
-                <ul class="nav navbar-nav">
-                    <li style="padding-top:10px;padding-left:10px;">
-                        <form class="form-inline">
-                            <div class="form-group">
-                                <label for="exampleInputName2" style="padding-right: 20px;">Title</label>
-                                <input type="text" class="form-control" id="exampleInputName2" ng-blur="setPermalink()" ng-model="content.title" placeholder="Title goes here" />
-                            </div>
-                            <div class="form-group" style="padding-left:20px;padding-right:20px;">
-                                <label for="exampleInputEmail2" style="padding-right: 20px;">Permalink</label>
-                                <input type="text" class="form-control" id="exampleInputEmail2" ng-blur="setPermalink()" ng-model="content.permalink" placeholder="url-goes-here">
-                            </div>
-                            <button type="button" class="btn btn-success" ng-click="save()">Save</button>
-                            <a type="button" class="btn btn-info" ng-if="content.id" href="/{{content.permalink}}" target="_blank">View</a>
-                        </form>
-                    </li>
-                </ul>
+              <ul class="nav navbar-nav">
+                <li style="padding-top:10px;padding-left:10px;">
+                  <form class="form-inline">
+                      <div class="form-group">
+                          <label for="exampleInputName2" style="padding-right: 20px;">Title</label>
+                          <input type="text" class="form-control" id="exampleInputName2" ng-blur="setPermalink()" ng-model="content.title" placeholder="Title goes here" />
+                      </div>
+                      <div class="form-group" style="padding-left:20px;padding-right:20px;">
+                          <label for="exampleInputEmail2" style="padding-right: 20px;">Permalink</label>
+                          <input type="text" class="form-control" id="exampleInputEmail2" ng-blur="setPermalink()" ng-model="content.permalink" placeholder="url-goes-here">
+                      </div>
+                      <button type="button" class="btn btn-success" ng-click="save()">Save</button>
+                      <a type="button" class="btn btn-info" ng-if="content.id" href="/{{content.permalink}}" target="_blank">View</a>
+                  </form>
+                </li>
+                <li style="padding-top:10px;padding-left:10px;">
+                  <form class="form-inline">
+                    <div class="form-group">
+                        <label for="template-chooser" style="padding-right: 20px;">Template</label>
+                        <select class="form-control" id="template-chooser" ng-change="updateTheme()" ng-model="currentTemplate">
+                          <option value="standard">Standard</option>
+                          <option value="bold">Bold</option>
+                          <option value="minimal">Minimal</option>
+                          <option value="corporate">Corporate</option>
+                        </select>
+                    </div>
+                  </form>
+                </li>
+              </ul>
             </div>
         </nav>
         <!-- END Top Navbar-->
@@ -86,8 +99,8 @@
                         <ng-include src="'/templates/site/templates/' + $parent.currentTemplate + '/section/' + section.type + '/configure.html'" />
                     </div>
                 </div>
-                <div ng-if="!content.sections || content.sections.length == 0" data-drop="true" data-jqyoui-options="{accept: 'a'}" ng-model="content.sections" jqyoui-droppable="{multiple:true}" style="min-height: 150px;width:100%;border: 3px dashed blue;" class="stage">
-                        <h2 style="width:100%;text-align:center;line-height:150px;margin:0;">Drag sections here to add</h2>
+                <div ng-if="!content.sections || content.sections.length == 0" data-drop="true" data-jqyoui-options="{accept: 'a'}" ng-model="content.sections" jqyoui-droppable="{multiple:true}" style="min-height: 150px;width:100%;border: 3px dashed blue; background-color: #fff;" class="stage">
+                  <h2 style="width:100%;text-align:center;line-height:150px;margin:0;">Drag sections here to add</h2>
                 </div>
             </div>
             <!-- END Page content-->
