--- a/src/components/site/templates/bold/bold.html
+++ b/src/components/site/templates/bold/bold.html
@@ -1,134 +1,6 @@
-<div class="site-templates-bold">
-    <div class="stage-shelf hidden" id="sidebar">
-        <ul class="nav nav-bordered nav-stacked">
-            <li class="nav-header"><small>Examples</small></li>
-            <li class="active">
-                <a href="/bold">Bold</a>
-            </li>
-            <li>
-                <a href="/standard">Startup</a>
-            </li>
-            <li>
-                <a href="/minimal">Minimal</a>
-            </li>
-
-            <li class="nav-divider"></li>
-
-            <li class="nav-header"><small>Sections</small></li>
-
-            <li>
-                <a href="#grid" data-target="#stage" data-toggle="stage">Grid</a>
-            </li>
-            <li>
-                <a href="#chainz" data-target="#stage" data-toggle="stage">2 Chainz</a>
-            </li>
-            <li>
-                <a href="#pricing" data-target="#stage" data-toggle="stage">Pricing</a>
-            </li>
-            <li>
-                <a href="#footer" data-target="#stage" data-toggle="stage">About</a>
-            </li>
-
-            <li class="nav-divider"></li>
-
-            <li class="nav-header"><small>Docs</small></li>
-
-            <li>
-                <a href="../docs/index.html">Theme</a>
-            </li>
-            <li>
-                <a href="http://getbootstrap.com">Bootstrap</a>
-            </li>
-
-        </ul>
-    </div>
-
-
+<div class="site-templates-bold" ng-controller="SiteTemplatesBoldController">
     <div class="stage" id="stage">
-
-        <div class="block block-fill-height app-block-wayne"
-             style="background-image: url(../assets/img/lilwayne.jpg)">
-
-            <button class="btn btn-link stage-toggle" data-target="#stage" data-toggle="stage">
-                <span class="icon icon-menu stage-toggle-icon"></span>
-                Menu
-            </button>
-
-            <div class="block-sm-middle block-xs-bottom">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-5">
-                            <h1 class="block-title m-b-md">
-              <span class="text-ribbon text-ribbon-primary">
-                <span>Music. Live.</span>
-              </span>
-                            </h1>
-                            <p class="lead">
-              <span class="text-ribbon text-ribbon-primary">
-                <span>
-                  Live recordings of your favorite artists before their hit albums drop.
-                </span>
-              </span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="block block-inverse block-transparent p-y-0 app-block-grid">
-
-            <div class="block-bg-clip">
-                <div class="block-bg">
-                    <div class="block-bg-img"></div>
-                </div>
-            </div>
-
-            <div class="container" id="grid">
-                <div class="row">
-                    <div class="col-lg-4 col-sm-6">
-                        <div class="row m-b">
-                            <div class="col-lg-12">
-                                <div class="panel panel-bold panel-danger m-b-0 app-box-shadow">
-                                    <img src="../assets/img/azalea.jpg">
-                                    <div class="panel-body p-b-lg">
-                                        <h4 class="m-b-0">Iggy Azalea</h4>
-                                        <p class="text-serif"><em>Released on Dropp 6 weeks early</em></p>
-                                        <hr>
-                                        <p class="text-serif"><em>Ms. Azalea was the first artist to reach out to Dropp to coordinate her leak. We knew it was going to be the largest unofficial album drop in history. We doubled server capacity and made a lot ton of coffee.</em></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row m-b hidden-xs">
-                            <div class="col-lg-12">
-                                <img src="../assets/img/minaj.jpg">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 col-sm-6">
-                        <div class="row">
-                            <div class="col-lg-6 m-b">
-                                <div class="app-box-shadow">
-                                    <img src="../assets/img/childish.jpg">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 m-b">
-                                <div class="app-box-shadow">
-                                    <img src="../assets/img/yeezus.jpg">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row hidden-xs">
-                            <div class="col-lg-12">
-                                <img src="../assets/img/cudi.jpg">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <ng-include src="'/templates/site/templates/bold/section/' + section.type + '/public.html'" ng-repeat="section in content.sections track by $index" />
 
         <div class="block block-fill-height block-transparent block-angle app-block-chainz" id="chainz">
 
