--- a/src/components/site/templates/standard/section/form/configure.html
+++ b/src/components/site/templates/standard/section/form/configure.html
@@ -1,4 +1,35 @@
-<div class="form" ng-controller="SiteTemplatesStandardSectionForm">
-	<!-- put all the view stuff in here-->
-	<ui-view></ui-view>
+<div ng-controller="SiteTemplatesStandardSectionFormController" class="block block-inverse block-secondary app-code-block" style="background-color: {{section.settings.section_background_color}};">
+	<div class="container">
+			<div class="row app-align-center">
+					<div class="col-sm-5 col-sm-push-7">
+					  <div class="form-group" ng-repeat="input in section.settings.inputs"
+								 config-settings
+							   ng-model="input"
+								 delete-function="removeInput"
+								 settings-function="inputItemSettings"
+								 settings="{'no-show': true, position: 'top'}">
+					    <label for="{{input.id}}" buttons="no" blur="submit" editable-text="input.label">{{input.label}}</label>
+					    <input ng-if="['text','password','number','date','email'].indexOf(input.type) > -1"
+										 type="{{input.type}}" class="form-control" id="{{input.id}}"
+										 placeholder="{{input.placeholder}}" name="{{input.name}}" />
+					  </div>
+
+						<div class="p-x-md m-b-lg text-center"
+								 style="cursor: pointer; padding:15px 30px; border: 3px dashed #0f0; background: #eee; color: #222; font-weight: 700; font-size: 14px;"
+								 ng-click="addInput()">
+								 Add Input
+						</div>
+
+						<button class="btn btn-default btn-lg btn-borderless" buttons="no" blur="submit" editable-text="section.settings.button_text">
+							{{section.settings.button_text}}
+						</button>
+					</div>
+
+					<div class="col-sm-6 col-sm-pull-5">
+							<h6 class="text-muted text-uppercase" buttons="no" blur="submit" editable-text="section.settings.tag">{{section.settings.tag}}</h6>
+							<h3 class="m-t-0" buttons="no" blur="submit" editable-text="section.settings.heading">{{section.settings.heading}}</h3>
+							<p class="lead m-b-md text-muted" buttons="no" blur="submit" editable-textarea="section.settings.description">{{section.settings.description}}</p>
+					</div>
+			</div>
+	</div>
 </div>
