--- a/src/components/site/templates/standard/section/header/configure.html
+++ b/src/components/site/templates/standard/section/header/configure.html
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-transparent navbar-fixed-top navbar-padded app-navbar p-t-md">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed p-x-0"
+                <button type="button" class="navbar-toggle collapsed p-x-0 hidden"
                         data-target="#stage" data-toggle="stage" data-distance="-250">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
