--- a/src/components/site/aaa-home/home.html
+++ b/src/components/site/aaa-home/home.html
@@ -1,1 +1,162 @@
-I am here
+<div class="builder">
+    <div class="wrapper">
+        <!-- START Top Navbar-->
+        <nav role="navigation" class="navbar navbar-default navbar-top navbar-fixed-top">
+            <!-- START navbar header-->
+            <div class="navbar-header">
+                <a href="/" class="navbar-brand" style="height:100%;padding-bottom:4px;">
+                    <div class="brand-logo">
+                        <img src="assets/img/ninja-pages.svg" alt="App Logo" class="img-responsive" style="max-height:50px; width: auto; float:left; margin-top:-7px;">
+                    </div>
+                    <div class="brand-logo-collapsed">
+                        <img src="assets/img/ninja-pages.svg" alt="App Logo" class="img-responsive" style="max-height:50px; width: auto; float:left; margin-top:-7px;">
+                    </div>
+                </a>
+            </div>
+            <!-- END navbar header-->
+            <div class="nav-wrapper">
+              <div class="pull-right" style="padding-top: 10px;">
+                <span class="fa fa-gear fa-2x pointer" ng-click="siteSettings()" style="cursor:pointer;"></span>
+              </div>
+            </div>
+        </nav>
+        <!-- END Top Navbar-->
+        <!-- START aside-->
+        <aside class="aside">
+            <!-- START Sidebar (left)-->
+            <nav class="sidebar">
+                <ul class="nav">
+
+                </ul>
+            </nav>
+            <!-- END Sidebar (left)-->
+        </aside>
+        <!-- End aside-->
+        <!-- START Main section-->
+        <section style="min-height: 995px;">
+          <div class="content-wrapper">
+            <div class="row">
+              <div class="col-md-3">
+                <div class="panel widget">
+                   <div class="panel-body">
+                      <div class="text-right text-muted">
+                         <em class="fa fa-file-text-o fa-2x"></em>
+                      </div>
+                      <h3 class="mt0">99.999</h3>
+                      <p class="text-muted">Total Pages</p>
+                      <div class="progress progress-striped progress-xs">
+                         <div role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-warning progress-100">
+                            <span class="sr-only">100%</span>
+                         </div>
+                      </div>
+                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                  <div class="panel">
+                     <div class="panel-heading">
+                        <div class="panel-title">
+                          Pages
+                        </div>
+                        <small class="text-muted">10 new pages created within last month</small>
+                     </div>
+                     <!-- START table-responsive-->
+                     <div class="table-responsive bg-white">
+                        <table class="table">
+                           <thead>
+                              <tr>
+                                 <th>
+                                    <strong class="text-gray-darker">
+                                       Title
+                                    </strong>
+                                 </th>
+                                 <th>
+                                    <strong class="text-gray-darker">
+                                       Permalink
+                                    </strong>
+                                 </th>
+                                 <th>
+                                    <strong class="text-gray-darker">
+                                      Date
+                                    </strong>
+                                 </th>
+                                 <th>
+                                    <strong class="text-gray-darker">
+                                      Actions
+                                    </strong>
+                                 </th>
+                              </tr>
+                           </thead>
+                           <tbody>
+                              <tr>
+                                <td>
+                                  Home Page
+                                </td>
+                                <td>
+                                  /home
+                                </td>
+                                <td>
+                                  11/01/2016
+                                </td>
+                                <td>
+                                  <a href="javascript:void(0);">View</a> |
+                                  <a href="javascript:void(0);">Edit</a> |
+                                  <a href="javascript:void(0);">Delete</a>
+                                </td>
+                              </tr>
+                           </tbody>
+                        </table>
+                     </div>
+                     <!-- END table-responsive-->
+                  </div>
+               </div>
+               <div class="col-md-6">
+                   <div class="panel">
+                      <div class="panel-heading">
+                         <div class="panel-title">
+                           Create New Page
+                         </div>
+                         <small class="text-muted">Click a template to start a new page</small>
+                      </div>
+                    <div class="row" style="padding:10px;">
+                      <div class="col-md-6">
+                        <!-- START widget-->
+                        <div class="panel widget">
+                           <img src="https://herc.objects.cdn.dream.io/uploads/a05a5b067e8a99376bfd73d3b228160a/bg1.jpg" alt="Image" class="img-responsive">
+                           <div class="panel-body">
+                              <div class="row row-table text-center">
+                                 <div class="col-xs-12">
+                                    <p>Template</p>
+                                    <h3 class="m0 text-primary">Standard</h3>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <!-- END widget-->
+                     </div>
+                     <div class="col-md-6">
+                       <!-- START widget-->
+                       <div class="panel widget">
+                          <img src="https://herc.objects.cdn.dream.io/uploads/a05a5b067e8a99376bfd73d3b228160a/bg1.jpg" alt="Image" class="img-responsive">
+                          <div class="panel-body">
+                             <div class="row row-table text-center">
+                                <div class="col-xs-12">
+                                   <p>Template</p>
+                                   <h3 class="m0 text-primary">Portfolio</h3>
+                                </div>
+                             </div>
+                          </div>
+                       </div>
+                       <!-- END widget-->
+                    </div>
+                    </div>
+                  </div>
+               </div>
+            </div>
+          </div>
+        </section>
+        <!-- END Main section-->
+    </div>
+</div>
