ninja pages can be edited now

--- a/src/components/builder/builder.html
+++ b/src/components/builder/builder.html
@@ -6,10 +6,10 @@
             <div class="navbar-header">
                 <a href="/" class="navbar-brand" style="height:100%;padding-bottom:4px;">
                     <div class="brand-logo">
-                        <img src="assets/img/ninja-pages.svg" alt="App Logo" class="img-responsive" style="max-height:50px; width: auto; float:left; margin-top:-7px;">
+                        <img src="/assets/img/ninja-pages.svg" alt="App Logo" class="img-responsive" style="max-height:50px; width: auto; float:left; margin-top:-7px;">
                     </div>
                     <div class="brand-logo-collapsed">
-                        <img src="assets/img/ninja-pages.svg" alt="App Logo" class="img-responsive" style="max-height:50px; width: auto; float:left; margin-top:-7px;">
+                        <img src="/assets/img/ninja-pages.svg" alt="App Logo" class="img-responsive" style="max-height:50px; width: auto; float:left; margin-top:-7px;">
                     </div>
                 </a>
             </div>
