we have a real dashboard now, just need to get the create new page button working and then fix some minor things

--- a/src/components/builder/builder.html
+++ b/src/components/builder/builder.html
@@ -4,7 +4,7 @@
         <nav role="navigation" class="navbar navbar-default navbar-top navbar-fixed-top">
             <!-- START navbar header-->
             <div class="navbar-header">
-                <a href="/" class="navbar-brand" style="height:100%;padding-bottom:4px;">
+                <a href="/dashboard" class="navbar-brand" style="height:100%;padding-bottom:4px;">
                     <div class="brand-logo">
                         <img src="/assets/img/ninja-pages.svg" alt="App Logo" class="img-responsive" style="max-height:50px; width: auto; float:left; margin-top:-7px;">
                     </div>
