--- a/src/components/site/aaa-home/home.html
+++ b/src/components/site/aaa-home/home.html
@@ -42,7 +42,7 @@
                       <div class="text-right text-muted">
                          <em class="fa fa-file-text-o fa-2x"></em>
                       </div>
-                      <h3 class="mt0">99.999</h3>
+                      <h3 class="mt0">{{pages.length}}</h3>
                       <p class="text-muted">Total Pages</p>
                       <div class="progress progress-striped progress-xs">
                          <div role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-warning progress-100">
@@ -54,7 +54,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-8">
                   <div class="panel">
                      <div class="panel-heading">
                         <div class="panel-title">
@@ -90,20 +90,20 @@
                               </tr>
                            </thead>
                            <tbody>
-                              <tr>
+                              <tr ng-repeat="page in pages">
                                 <td>
-                                  Home Page
+                                  {{page.title}}
                                 </td>
                                 <td>
-                                  /home
+                                  /{{page.permalink}}
                                 </td>
                                 <td>
-                                  11/01/2016
+                                  {{moment(page.created_at).format('MM/DD/YYYY')}}
                                 </td>
                                 <td>
-                                  <a href="javascript:void(0);">View</a> |
-                                  <a href="javascript:void(0);">Edit</a> |
-                                  <a href="javascript:void(0);">Delete</a>
+                                  <a target="_blank" href="/{{page.permalink}}">View</a> |
+                                  <a href="/builder/{{page.id}}">Edit</a> |
+                                  <a href="#">Delete</a>
                                 </td>
                               </tr>
                            </tbody>
@@ -112,7 +112,7 @@
                      <!-- END table-responsive-->
                   </div>
                </div>
-               <div class="col-md-6">
+               <div class="col-md-4">
                    <div class="panel">
                       <div class="panel-heading">
                          <div class="panel-title">
