pages can be deleted now

--- a/src/components/site/aaa-home/home.html
+++ b/src/components/site/aaa-home/home.html
@@ -103,7 +103,7 @@
                                 <td>
                                   <a target="_blank" href="/{{page.permalink}}">View</a> |
                                   <a href="/builder/{{page.id}}">Edit</a> |
-                                  <a href="#">Delete</a>
+                                  <a href="#" ng-click="deletePage(page)">Delete</a>
                                 </td>
                               </tr>
                            </tbody>
