--- a/src/components/site/aaa-login/login.html
+++ b/src/components/site/aaa-login/login.html
@@ -12,25 +12,16 @@
              </p>
           </div>
           <div class="panel-body">
-             <form role="form" class="mb-lg">
-                <div class="text-right mb-sm"><a href="#" class="text-muted">Need to Signup?</a>
-                </div>
+             <form role="form" class="mb-lg" ng-submit="login()">
                 <div class="form-group has-feedback">
-                   <input id="exampleInputEmail1" type="email" placeholder="Enter email" class="form-control">
+                   <input ng-model="user.email" id="exampleInputEmail1" type="email" placeholder="Enter email" class="form-control">
                    <span class="fa fa-envelope form-control-feedback text-muted"></span>
                 </div>
                 <div class="form-group has-feedback">
-                   <input id="exampleInputPassword1" type="password" placeholder="Password" class="form-control">
+                   <input ng-model="user.password" id="exampleInputPassword1" type="password" placeholder="Password" class="form-control">
                    <span class="fa fa-lock form-control-feedback text-muted"></span>
                 </div>
                 <div class="clearfix">
-                   <div class="checkbox c-checkbox pull-left mt0">
-                      <label>
-                         <input type="checkbox" value="">
-                         <span class="fa fa-check"></span>Remember Me</label>
-                   </div>
-                   <div class="pull-right"><a href="#" class="text-muted">Forgot your password?</a>
-                   </div>
                 </div>
                 <button type="submit" class="btn btn-block btn-primary">Login</button>
              </form>
