--- a/src/components/site/content/content.html
+++ b/src/components/site/content/content.html
@@ -1,1 +1,4 @@
+<style>
+  {{content.meta_data.custom_styles}}
+</style>
 <ng-include src="'/templates/site/templates/' + content.theme + '/' + content.theme + '.html'" />
