--- a/src/components/site/templates/standard/section/header/public.html
+++ b/src/components/site/templates/standard/section/header/public.html
@@ -36,7 +36,10 @@
                 <div class="col-sm-10 col-md-6">
                     <h1 ng-if="section.settings.display_header_text && section.settings.display_header_text != '0'" class="block-title m-b-sm">{{section.settings.header_text}}</h1>
                     <p ng-if="section.settings.display_description && section.settings.display_description != '0'" class="lead m-b-md text-muted">{{section.settings.description}}</p>
-                    <a ng-if="section.settings.display_cta && section.settings.display_cta != '0'" href="{{section.settings.cta_url}}" class="btn btn-primary btn-lg" style="background-color: {{section.settings.cta_background_color}};border-color: {{section.settings.cta_border_color}}; color: {{section.settings.cta_font_color}};">{{section.settings.cta_text}}</a>
+                    <a ng-if="section.settings.display_cta && section.settings.display_cta != '0'"
+                       href="{{section.settings.cta_url}}" class="btn btn-primary btn-lg"
+                       style="background-color: {{section.settings.cta_background_color}};border-color: {{section.settings.cta_border_color}}; color: {{section.settings.cta_font_color}};"
+                       ng-click="onCtaClick()">{{section.settings.cta_text}}</a>
                 </div>
             </div>
         </div>
