--- a/src/components/site/templates/standard/section/header/configure.html
+++ b/src/components/site/templates/standard/section/header/configure.html
@@ -40,8 +40,13 @@
                 <div class="col-sm-10 col-md-6">
                     <h1 ng-if="section.settings.display_header_text && section.settings.display_header_text != '0'" class="block-title m-b-sm" e-style="font-size: 42px; line-height: 1; color: inherit; margin-top: 21px; margin-bottom: 10.5px;font-weight: 500; 'Work sans','Helvetica Neue',Helvetica,Arial,sans-serif;" buttons="no" blur="submit" editable-text="section.settings.header_text" config-settings delete-function="toggleDisplayHeader" show-function="toggleDisplayHeader" ng-model="section.settings.display_header_text">{{section.settings.header_text}}</h1>
                     <p ng-if="section.settings.display_description && section.settings.display_description != '0'" class="lead m-b-md text-muted" e-style="font-size: 21px; color: rgba(255,255,255,.7); margin: 0 0 10.5px; margin-bottom:30px !important; line-height:1.6; font-weight: 300;" buttons="no" blur="submit" editable-textarea="section.settings.description" config-settings ng-model="section.settings.display_description" delete-function="toggleDisplayDescription" show-function="toggleDisplayDescription">{{section.settings.description}}</p>
-                    <button ng-if="section.settings.display_cta && section.settings.display_cta != '0'" class="btn btn-primary btn-lg has-settings-button item-wrapper" style="background-color: {{section.settings.cta_background_color}};border-color: {{section.settings.cta_border_color}};" config-settings settings-function="editCta" ng-model="section.settings.display_cta" delete-function="toggleDisplayCta" show-function="toggleDisplayCta">
-                        <span buttons="no" blur="submit" editable-text="section.settings.cta_text" style="color:{{section.settings.cta_font_color}};">{{section.settings.cta_text}}</span>
+                    <button ng-if="section.settings.display_cta && section.settings.display_cta != '0'"
+                            class="btn btn-primary btn-lg has-settings-button item-wrapper"
+                            style="background-color: {{section.settings.cta_background_color}};border-color: {{section.settings.cta_border_color}};"
+                            config-settings settings-function="editCta" ng-model="section.settings.display_cta"
+                            delete-function="toggleDisplayCta" show-function="toggleDisplayCta"
+                            buttons="no" blur="submit" editable-text="section.settings.cta_text" style="color:{{section.settings.cta_font_color}};">
+                      {{section.settings.cta_text}}
                     </button>
                 </div>
             </div>
